設定値変更

--- a/micro-web/src/main/resources/config/application-dev.yml
+++ b/micro-web/src/main/resources/config/application-dev.yml
@@ -73,10 +73,11 @@ spring:
 # ----------------------------------------
 server:
   port: 8081
+  context-path: /Sudoku
   ssl:
     enable: true
     key-store: keystore.p12
-    key-store-password: mabubu
+    key-store-password:
     keyStoretype: PKCS12
     keyAlias: tomcat
     protocol: TLS
