--- a/micro-web/src/main/resources/config/application-production.yml
+++ b/micro-web/src/main/resources/config/application-production.yml
@@ -23,7 +23,7 @@ spring:
     auto: true
   beaninfo:
     ignore: true
-  profiles: pro
+  profiles: production
   http:
     encoding:
       charset: UTF-8
@@ -73,6 +73,7 @@ spring:
 # ----------------------------------------
 server:
   port: 8081
+  context-path: /Sudoku
   ssl:
     enable: true
     key-store: keystore.p12
@@ -140,7 +141,7 @@ flyway:
   check-location: false
   locations: classpath:db/migration
   url: jdbc:mysql://localhost:3306/SUDOKU
-  #username:
+  username:
   sql-migration-prefix: V
   sql-migration-suffix: .sql
 liquibase:
