--- a/micro-web/src/main/resources/config/application-dev.yml
+++ b/micro-web/src/main/resources/config/application-dev.yml
@@ -23,6 +23,21 @@ spring:
     auto: true
   beaninfo:
     ignore: true
+  devtools:
+    livereload:
+      enabled: true
+      port: 35729
+    restart:
+      enabled: true
+      poll-interval: 1000
+    quiet-period: 400
+  remote:
+    debug:
+      enabled: false
+      local-port: 8000
+    restart:
+      enabled: false
+      secret-header-name: X-AUTH-TOKEN
   profiles: dev
   http:
     encoding:
@@ -75,18 +90,19 @@ server:
   port: 8081
   context-path: /Sudoku
   ssl:
-    enable: true
-    key-store: keystore.p12
+    enable: false
+    key-store:
     key-store-password:
-    keyStoretype: PKCS12
-    keyAlias: tomcat
-    protocol: TLS
+    keyStoretype:
+    keyAlias:
+    protocol:
   tomcat:
     accesslog:
       directory: logs
       enabled: true
       pattern: common
       prefix: access_log
+      rotate: true
       suffix: .log
     uri-encoding: UTF-8
 # ----------------------------------------
@@ -106,6 +122,8 @@ security:
 # ENDPOINTS (AbstractEndpoint subclasses)
 # ----------------------------------------
 endpoints:
+  auditevents:
+    enabled: true
   enabled: true
   actuator:
     enabled: true
@@ -123,6 +141,8 @@ endpoints:
     enabled: true
     path: /jolokia
     sensitive: true
+  loggers:
+    enabled: true
   logfile:
     enabled: true
     path: /logfile
@@ -132,6 +152,9 @@ endpoints:
       enabled: true
       gauge-submissions: merged
       counter-submissions: merged
+management:
+  security:
+    enabled: false
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
@@ -139,7 +162,7 @@ flyway:
   enabled: true
   baseline-version: 1.1
   check-location: false
-  locations: classpath:db/migration
+  locations: classpath:db/migration/mysql
   url: jdbc:mysql://localhost:3306/SUDOKU
   username:
   sql-migration-prefix: V
