--- a/micro-batch/src/main/resources/config/application-dev.yml
+++ b/micro-batch/src/main/resources/config/application-dev.yml
@@ -24,6 +24,21 @@ spring:
     auto: true
   beaninfo:
     ignore: true
+  devtools:
+      livereload:
+        enabled: true
+        port: 35729
+      restart:
+        enabled: true
+        poll-interval: 1000
+      quiet-period: 400
+  remote:
+      debug:
+        enabled: false
+        local-port: 8000
+      restart:
+        enabled: false
+        secret-header-name: X-AUTH-TOKEN
   profiles: dev
   http:
     encoding:
@@ -75,12 +90,12 @@ spring:
 server:
   port: 8082
   ssl:
-    enable: true
-    key-store: keystore.p12
-    key-store-password: mabubu
-    keyStoretype: PKCS12
-    keyAlias: tomcat
-    protocol: TLS
+    enable: false
+    key-store:
+    key-store-password:
+    keyStoretype:
+    keyAlias:
+    protocol:
   tomcat:
     accesslog:
       directory: logs
@@ -106,6 +121,8 @@ security:
 # ENDPOINTS (AbstractEndpoint subclasses)
 # ----------------------------------------
 endpoints:
+  auditevents:
+    enabled: true
   enabled: true
   actuator:
     enabled: true
@@ -123,6 +140,8 @@ endpoints:
     enabled: true
     path: /jolokia
     sensitive: true
+  loggers:
+    enabled: true
   logfile:
     enabled: true
     path: /logfile
@@ -132,6 +151,9 @@ endpoints:
       enabled: true
       gauge-submissions: merged
       counter-submissions: merged
+management:
+  security:
+    enabled: false
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
@@ -139,7 +161,7 @@ flyway:
   enabled: true
   baseline-version: 1.0
   check-location: false
-  locations: classpath:db/migration
+  locations: classpath:db/migration/mysql
   url: jdbc:mysql://localhost:3306/quartz
   username:
   sql-migration-prefix: V
