--- a/micro-web/src/main/resources/config/application-dev.yml
+++ b/micro-web/src/main/resources/config/application-dev.yml
@@ -90,7 +90,7 @@ server:
   port: 8081
   context-path: /Sudoku
   ssl:
-    enable: false
+    enabled: false
     key-store:
     key-store-password:
     keyStoretype:
