--- a/micro-batch/build.gradle
+++ b/micro-batch/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 flyway {
     driver = 'com.mysql.cj.jdbc.Driver'
-    user = ''
+    user = 'root'
     url = 'jdbc:mysql://localhost:3306/quartz?useSSL=false'
 }
 mainClassName = 'jp.co.valtech.sudoku.batch.BatchApp'
